# libdsmr

./: .gitignore  CMakeLists.txt  LICENSE
examples/: dsmr_2.cpp  dsmr_4.cpp
include/dsmr/: defaultparser.h  dsmr.h  fields.h  parser.h  reader.h  util.h
source/: defaultparser.cpp  fields.cpp
